--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "davejamesmiller/laravel-breadcrumbs": "^5.2",
         "fideloper/proxy": "^4.0",
         "greensight/ibt-common-lib": "dev-master",
         "laravel/framework": "5.8.*",
@@ -39,6 +41,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
