--- a/html/package.json
+++ b/html/package.json
@@ -126,6 +126,8 @@
     "dependencies": {
         "@babel/polyfill": "^7.4.3",
         "body-scroll-lock": "^2.6.1",
+        "bootstrap": "^4.3.1",
+        "bootstrap-vue": "^2.0.0-rc.22",
         "core-js": "3",
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
