--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,79 @@
+# IDEs #
+########
+*.sublime-project
+*.sublime-workspace
+/.idea/
+*.komodoproject
+*.vscode
+
+# Static content #
+###################
+*.csv
+*.pdf
+*.doc
+*.docx
+*.xls
+*.xlsx
+*.xml
+*.txt
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.box
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.tgz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+.vagrant
+Homestead.json
+Homestead.yaml
+ehthumbs.db
+Thumbs.db
+sftp-config.json
+
+# Project #
+###########
 node_modules
+bower_components
 /public/hot
 /public/storage
 /storage/*.key
+/storage/debugbar
 /vendor
-.env
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
 npm-debug.log
 yarn-error.log
-
+.env
+/public/assets/styles/*.map
+/public/assets/scripts/*.map
+/public/build
 auth.json
