--- a/html/package.json
+++ b/html/package.json
@@ -125,6 +125,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.3",
+        "axios": "^0.19.0",
         "body-scroll-lock": "^2.6.1",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.0.0-rc.22",
