--- a/html/package.json
+++ b/html/package.json
@@ -125,6 +125,9 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.22",
+        "@fortawesome/free-solid-svg-icons": "^5.10.2",
+        "@fortawesome/vue-fontawesome": "^0.1.6",
         "axios": "^0.19.0",
         "body-scroll-lock": "^2.6.1",
         "bootstrap": "^4.3.1",
@@ -141,6 +144,7 @@
         "vue-for-range": "^1.0.2",
         "vue-recaptcha": "^1.1.1",
         "vue-the-mask": "^0.11.1",
+        "vue2-datepicker": "^2.12.0",
         "vuelidate": "^0.7.4",
         "vuex": "^3.1.0",
         "whatwg-fetch": "^3.0.0",
