--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 AUTH_SERVICE_HOST=
+MERCHANT_SERVICE_HOST=
+PIM_SERVICE_HOST=
+STORE_SERVICE_HOST=
+FILE_SERVICE_HOST=
+MESSAGE_SERVICE_HOST=
+MARKETING_SERVICE_HOST=
+OMS_SERVICE_HOST=
