--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,10 @@
         {
             "type": "vcs",
             "url": "https://gitlab.com/greensight/ibt-marketing-lib"
+        },
+        {
+            "type": "vcs",
+            "url": "https://gitlab.com/greensight/ibt-cm-lib"
         }
     ],
     "require": {
@@ -54,6 +58,7 @@
         "greensight/ibt-oms-lib": "dev-master",
         "greensight/ibt-pim-lib": "dev-master",
         "greensight/ibt-store-lib": "dev-master",
+        "greensight/ibt-cm-lib": "dev-master",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
