--- a/html/package.json
+++ b/html/package.json
@@ -125,6 +125,8 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.3",
+        "@ckeditor/ckeditor5-build-classic": "^15.0.0",
+        "@ckeditor/ckeditor5-vue": "^1.0.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.22",
         "@fortawesome/free-solid-svg-icons": "^5.10.2",
         "@fortawesome/vue-fontawesome": "^0.1.6",
