--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,10 @@
         {
             "type": "vcs",
             "url": "https://gitlab.com/greensight/ibt-cm-lib"
+        },
+        {
+            "type": "vcs",
+            "url": "https://gitlab.com/greensight/ibt-logistics-lib"
         }
     ],
     "require": {
@@ -52,6 +56,7 @@
         "fideloper/proxy": "^4.0",
         "greensight/ibt-common-lib": "dev-master",
         "greensight/ibt-file-lib": "dev-master",
+        "greensight/ibt-logistics-lib": "dev-master",
         "greensight/ibt-marketing-lib": "dev-master",
         "greensight/ibt-merchant-management-lib": "dev-master",
         "greensight/ibt-message-lib": "dev-master",
