--- a/html/package.json
+++ b/html/package.json
@@ -132,7 +132,7 @@
         "axios": "^0.19.0",
         "body-scroll-lock": "^2.6.1",
         "bootstrap": "^4.3.1",
-        "bootstrap-vue": "^2.0.0-rc.22",
+        "bootstrap-vue": "2.2.2",
         "core-js": "3",
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
