--- a/html/package.json
+++ b/html/package.json
@@ -148,6 +148,7 @@
         "vue-suggestions": "^1.4.0",
         "vue-the-mask": "^0.11.1",
         "vue2-datepicker": "^2.12.0",
+        "vuedraggable": "^2.23.2",
         "vuelidate": "^0.7.4",
         "vuex": "^3.1.0",
         "whatwg-fetch": "^3.0.0",
