--- a/html/package.json
+++ b/html/package.json
@@ -138,6 +138,7 @@
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
         "lazysizes": "^5.0.0",
+        "lodash": "^4.17.15",
         "terser-webpack-plugin": "^1.2.3",
         "vee-validate": "^2.2.0",
         "vue": "^2.6.10",
