--- a/html/package.json
+++ b/html/package.json
@@ -137,8 +137,12 @@
         "core-js": "3",
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
+        "jquery": "^3.4.1",
         "lazysizes": "^5.0.0",
         "lodash": "^4.17.15",
+        "qs": "^6.9.1",
+        "select2": "^4.0.13",
+        "select2-bootstrap-theme": "^0.1.0-beta.10",
         "terser-webpack-plugin": "^1.2.3",
         "vee-validate": "^2.2.0",
         "vue": "^2.6.10",
