--- a/composer.json
+++ b/composer.json
@@ -52,6 +52,7 @@
   "require": {
     "php": "^7.1.3",
     "ext-json": "*",
+    "box/spout": "^3.1",
     "fideloper/proxy": "^4.0",
     "greensight/ibt-cm-lib": "dev-master",
     "greensight/ibt-cms-lib": "dev-master",
@@ -121,4 +122,3 @@
     ]
   }
 }
-
