--- a/html/package.json
+++ b/html/package.json
@@ -140,6 +140,7 @@
         "jquery": "^3.4.1",
         "lazysizes": "^5.0.0",
         "lodash": "^4.17.15",
+        "moment": "^2.24.0",
         "qs": "^6.9.1",
         "select2": "^4.0.13",
         "select2-bootstrap-theme": "^0.1.0-beta.10",
@@ -153,7 +154,7 @@
         "vue-recaptcha": "^1.1.1",
         "vue-suggestions": "^1.4.0",
         "vue-the-mask": "^0.11.1",
-        "vue2-datepicker": "^2.12.0",
+        "vue2-datepicker": "^3.4.1",
         "vuedraggable": "^2.23.2",
         "vuelidate": "^0.7.4",
         "vuex": "^3.1.0",
