--- a/html/package.json
+++ b/html/package.json
@@ -134,6 +134,7 @@
         "body-scroll-lock": "^2.6.1",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "2.2.2",
+        "clipboard-polyfill": "^2.8.6",
         "core-js": "3",
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
