--- a/html/package.json
+++ b/html/package.json
@@ -154,6 +154,7 @@
         "vue-suggestions": "^1.4.0",
         "vue-the-mask": "^0.11.1",
         "vue2-datepicker": "^3.4.1",
+        "vue2-timepicker": "^1.1.2",
         "vuedraggable": "^2.23.2",
         "vuelidate": "^0.7.4",
         "vuex": "^3.1.0",
