--- a/html/package.json
+++ b/html/package.json
@@ -125,6 +125,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.3",
+        "@ckeditor/ckeditor5-build-classic": "^19.0.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.22",
         "@fortawesome/free-solid-svg-icons": "^5.10.2",
         "@fortawesome/vue-fontawesome": "^0.1.6",
@@ -147,6 +148,7 @@
         "vee-validate": "^2.2.0",
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^3.1.3",
+        "vue-ckeditor5": "^0.5.0",
         "vue-clamp": "^0.2.1",
         "vue-for-range": "^1.0.2",
         "vue-loader": "^15.7.0",
