--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
 include:
     - project: ibt.studio/ci-templates
-      file: /AutoDevops.gitlab-ci.yml
-      
-
+      file: /templates/.php-fpm.project.template.yml
