audit queries to ms

--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
     "phpoffice/phpspreadsheet": "^1.12"
   },
   "require-dev": {
+    "barryvdh/laravel-debugbar": "3.4",
     "barryvdh/laravel-ide-helper": "^2.6",
     "beyondcode/laravel-dump-server": "^1.0",
     "filp/whoops": "^2.0",
