--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="IBT Admin"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -30,29 +30,22 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
 AUTH_SERVICE_HOST=
-MERCHANT_SERVICE_HOST=
-PIM_SERVICE_HOST=
-STORE_SERVICE_HOST=
-FILE_SERVICE_HOST=
-MESSAGE_SERVICE_HOST=
-MARKETING_SERVICE_HOST=
-OMS_SERVICE_HOST=
-LOGISTICS_SERVICE_HOST=
+CATALOG_IMPORT_SERVICE_HOST=
 CUSTOMER_SERVICE_HOST=
 CMS_SERVICE_HOST=
+FILE_SERVICE_HOST=
+LOGISTICS_SERVICE_HOST=
+MARKETING_SERVICE_HOST=
+MERCHANT_SERVICE_HOST=
+MESSAGE_SERVICE_HOST=
+OMS_SERVICE_HOST=
+PIM_SERVICE_HOST=
+STORE_SERVICE_HOST=
 
 SHOWCASE_HOST=
+
+TOKEN_PUBLIC_KEY=
+TOKEN_PRIVATE_KEY=
+
+PAYMENT_RETURN_URL=
