--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-oms-lib": "dev-feature/IBT-453-add-order-return-reasons-dictionary as dev-master",
         "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
         "laravel/framework": "5.8.*",
