--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "iwengo/ibt-catalog-import-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-cm-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-common-lib": "dev-feature/IBT-441-user-roles as dev-master-ylab",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
