--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-pim-lib": "dev-feature/IBT-437-update-public-events as dev-master",
         "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
