IBT-495: implement new public events report && some refactoring common reports

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ MESSAGE_SERVICE_HOST=
 OMS_SERVICE_HOST=
 PIM_SERVICE_HOST=
 STORE_SERVICE_HOST=
+REPORTS_SERVICE_HOST=
 
 SHOWCASE_HOST=
 I_1C_SERVICE_HOST=
