--- a/composer.json
+++ b/composer.json
@@ -68,16 +68,16 @@
         "box/spout": "^3.1",
         "fideloper/proxy": "^4.0",
         "iwengo/ibt-catalog-import-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-cm-lib": "dev-feature/IBT-495-referal-partner-report as dev-master",
+        "iwengo/ibt-cm-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-merchant-management-lib": "dev-feature/IBT-495-referral-bill-operations-status-returned as dev-master",
+        "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
-        "ibt/reports-lib": "dev-feature/IBT-495-reports-refactoring",
+        "ibt/reports-lib": "dev-master",
         "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
