--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
         "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-marketing-lib": "dev-feature/IBT-650-promocode-limit-for-all-users as dev-master",
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
