--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
         "box/spout": "^3.1",
         "fideloper/proxy": "^4.0",
         "iwengo/ibt-catalog-import-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-cm-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-cm-lib": "dev-feature/IBT-489-user-role-refactoring as dev-master-ylab",
         "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-common-lib": "dev-feature/IBT-489-user-role-refactoring as dev-master-ylab",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
