--- a/html/package.json
+++ b/html/package.json
@@ -146,6 +146,7 @@
         "select2": "^4.0.13",
         "select2-bootstrap-theme": "^0.1.0-beta.10",
         "terser-webpack-plugin": "^1.2.3",
+        "uuid": "^8.3.2",
         "vee-validate": "^2.2.0",
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^3.1.3",
