--- a/composer.json
+++ b/composer.json
@@ -76,7 +76,7 @@
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-pim-lib": "dev-feature/IBT-651-strikes-field as dev-master",
         "ibt/reports-lib": "dev-master",
         "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
         "laravel/framework": "5.8.*",
