--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
+        "iwengo/ibt-merchant-management-lib": "dev-feature/IBT-726-merchant-payment-methods as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-oms-lib": "dev-feature/IBT-726 as dev-master",
         "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
