--- a/html/package.json
+++ b/html/package.json
@@ -125,6 +125,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.3",
+        "@ckeditor/ckeditor5-vue2": "^2.0.0",
         "@ckeditor/ckeditor5-build-classic": "^19.0.2",
         "@fortawesome/fontawesome-svg-core": "^1.2.22",
         "@fortawesome/free-solid-svg-icons": "^5.10.2",
@@ -134,6 +135,7 @@
         "body-scroll-lock": "^2.6.1",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "2.2.2",
+        "ckeditor5-custom-build": "file:./customCKEditorBuild",
         "clipboard-polyfill": "^2.8.6",
         "core-js": "3",
         "focus-visible": "^4.1.5",
