IBT-436: insert file in landing

--- a/html/customCKEditorBuild/package.json
+++ b/html/customCKEditorBuild/package.json
@@ -44,5 +44,8 @@
   },
   "scripts": {
     "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "@ibt/ckeditor5-file-upload": "file:./plugins/ckeditor5-file-upload"
   }
 }
