--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "fideloper/proxy": "^4.0",
         "iwengo/ibt-catalog-import-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-cm-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-cms-lib": "dev-feature/IBT-436-preview-page as dev-master-ylab",
+        "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
