BX-6349: prepare mr

--- a/composer.json
+++ b/composer.json
@@ -70,12 +70,12 @@
         "iwengo/ibt-catalog-import-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-cm-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-common-lib": "dev-hottask/BX-6349-abandoned-baskets as dev-master-ylab",
+        "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-oms-lib": "dev-hottask/BX-6349-abandoned-baskets as dev-master-ylab",
+        "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
         "ibt/reports-lib": "dev-master",
         "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
