--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-oms-lib": "dev-feature/BX-6199-credit-payment as dev-master-ylab",
+        "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
         "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
         "ibt/reports-lib": "dev-master",
         "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
