--- a/html/package.json
+++ b/html/package.json
@@ -141,6 +141,7 @@
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
         "jquery": "^3.4.1",
+        "jschardet": "^3.0.0",
         "lazysizes": "^5.0.0",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
