--- a/composer.json
+++ b/composer.json
@@ -67,18 +67,18 @@
         "barryvdh/laravel-debugbar": "3.4",
         "box/spout": "^3.1",
         "fideloper/proxy": "^4.0",
-        "iwengo/ibt-catalog-import-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-cm-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-cms-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-common-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-logistics-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-marketing-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-merchant-management-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-message-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-oms-lib": "dev-master-ylab as dev-master",
-        "iwengo/ibt-pim-lib": "dev-master-ylab as dev-master",
+        "ibt/catalog-import-lib": "dev-master",
+        "ibt/cm-lib": "dev-master",
+        "ibt/cms-lib": "dev-master",
+        "ibt/common-lib": "dev-master",
+        "ibt/logistics-lib": "dev-master",
+        "ibt/marketing-lib": "dev-master",
+        "ibt/merchant-management-lib": "dev-master",
+        "ibt/message-lib": "dev-master",
+        "ibt/oms-lib": "dev-master",
+        "ibt/pim-lib": "dev-master",
         "ibt/reports-lib": "dev-master",
-        "iwengo/ibt-store-lib": "dev-master-ylab as dev-master",
+        "ibt/store-lib": "dev-master",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "letsgoi/laravel-health-check": "dev-master",
