--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "ibt/catalog-import-lib": "dev-master",
         "ibt/cm-lib": "dev-master",
         "ibt/cms-lib": "dev-master",
-        "ibt/common-lib": "dev-master",
+        "ibt/common-lib": "dev-feature/BX-6474-info-about-new-registration as dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
