--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "ibt/common-lib": "dev-feature/BX-6474-info-about-new-registration as dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
-        "ibt/merchant-management-lib": "dev-master",
+        "ibt/merchant-management-lib": "dev-feature/BX-6474-info-about-new-registration as dev-master",
         "ibt/message-lib": "dev-master",
         "ibt/oms-lib": "dev-master",
         "ibt/pim-lib": "dev-master",
