--- a/composer.json
+++ b/composer.json
@@ -70,10 +70,10 @@
         "ibt/catalog-import-lib": "dev-master",
         "ibt/cm-lib": "dev-master",
         "ibt/cms-lib": "dev-master",
-        "ibt/common-lib": "dev-feature/BX-6474-info-about-new-registration as dev-master",
+        "ibt/common-lib": "dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
-        "ibt/merchant-management-lib": "dev-feature/BX-6474-info-about-new-registration as dev-master",
+        "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
         "ibt/oms-lib": "dev-master",
         "ibt/pim-lib": "dev-master",
