BX-6366: add is_available_for_mc to payment methods setting and update markAsPaid method

--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
-        "ibt/oms-lib": "dev-master",
+        "ibt/oms-lib": "dev-feature/BX-6366-bank-transfer-payment-method",
         "ibt/pim-lib": "dev-master",
         "ibt/reports-lib": "dev-master",
         "ibt/store-lib": "dev-master",
