--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,7 @@
         "ibt/cm-lib": "dev-master",
         "ibt/cms-lib": "dev-master",
         "ibt/common-lib": "dev-master",
-        "ibt/logistics-lib": "dev-master",
+        "ibt/logistics-lib": "dev-feature/BX-5759-dpd-delivery as dev-master",
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
