--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "fideloper/proxy": "^4.0",
         "ibt/catalog-import-lib": "dev-master",
         "ibt/cm-lib": "dev-master",
-        "ibt/cms-lib": "dev-master",
+        "ibt/cms-lib": "dev-feature/BX-6366-update-organization-card-info",
         "ibt/common-lib": "dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
