--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "box/spout": "^3.3",
         "ibt/catalog-import-lib": "dev-master",
-        "ibt/cm-lib": "dev-master",
+        "ibt/cm-lib": "dev-feature/BX-6366-bank-transfer-payment-method",
         "ibt/cms-lib": "dev-feature/BX-6366-update-organization-card-info",
         "ibt/common-lib": "dev-master",
         "ibt/logistics-lib": "dev-master",
