--- a/composer.json
+++ b/composer.json
@@ -67,14 +67,14 @@
         "barryvdh/laravel-debugbar": "^3.6",
         "box/spout": "^3.3",
         "ibt/catalog-import-lib": "dev-master",
-        "ibt/cm-lib": "dev-feature/BX-6366-bank-transfer-payment-method",
-        "ibt/cms-lib": "dev-feature/BX-6366-update-organization-card-info",
+        "ibt/cm-lib": "dev-master",
+        "ibt/cms-lib": "dev-master",
         "ibt/common-lib": "dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
-        "ibt/oms-lib": "dev-feature/BX-6366-bank-transfer-payment-method",
+        "ibt/oms-lib": "dev-master",
         "ibt/pim-lib": "dev-master",
         "ibt/reports-lib": "dev-master",
         "ibt/store-lib": "dev-master",
