--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
-        "ibt/message-lib": "dev-feature/BX-6594-custom-filter-chats as dev-master",
+        "ibt/message-lib": "dev-master",
         "ibt/oms-lib": "dev-master",
         "ibt/pim-lib": "dev-master",
         "ibt/reports-lib": "dev-master",
