--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ Build:
     image: docker:stable
     script:
         #    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS  $REGISTRY
-        - docker login -u softcom -p cerfgblfhfc $REGISTRY
+        - docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD $REGISTRY
         #    - docker pull $CONTAINER_IMAGE:latest || true
         #    - docker build --cache-from $CONTAINER_IMAGE:latest -t $CONTAINER_IMAGE:latest -t $CONTAINER_IMAGE:$CONTAINER_IMAGE_TAG .
         - docker build -t $CONTAINER_IMAGE:latest -t $CONTAINER_IMAGE:$CONTAINER_IMAGE_TAG .
