--- a/composer.json
+++ b/composer.json
@@ -74,7 +74,7 @@
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
-        "ibt/oms-lib": "dev-master",
+        "ibt/oms-lib": "dev-feature/BX-7042-add-api-credit-line",
         "ibt/pim-lib": "dev-master",
         "ibt/reports-lib": "dev-master",
         "ibt/store-lib": "dev-master",
