--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 services:
-  ibt-admin:
-    container_name: ibt-admin
+  ENV-ibt-admin:
+    container_name: ENV-ibt-admin
     image: registry.ibt.ru:5050/ibt-admin:${TAG}
     restart: always
     env_file:
-      - /home/iBT.studio/svc/ibt-admin/.env
+      - /home/iBT.studio/ENV/svc/ibt-admin/.env
     environment:
       - PHP_SOCK_FILE=/sockets/ibt-admin_php
     volumes:
       - /sockets/:/sockets/
-      - /home/iBT.studio/svc/ibt-admin/.env:/var/www/.env
-    hostname: ibt-admin.prod
+      - /home/iBT.studio/ENV/svc/ibt-admin/.env:/var/www/.env
+    hostname: ibt-admin.ENV
     networks:
-      prod.svc.cluster.local:
+      ENV.svc.cluster.local:
         aliases:
-          - ibt-admin.prod.svc.cluster.local
+          - ibt-admin.ENV.svc.cluster.local
     extra_hosts:
       - "mysql-master:host-gateway"
