--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - PHP_SOCK_FILE=/sockets/ENV-ibt-admin_php
     volumes:
       - /sockets/:/sockets/
+      - /home/iBT.studio/ENV/data/jwt_key/:/var/www/jwt_key/
       - /home/iBT.studio/ENV/svc/ibt-admin/.env:/var/www/.env
     hostname: ibt-admin.ENV
     networks:
