--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,4 @@ services:
           - ibt-admin.ENV.svc.cluster.local
     extra_hosts:
       - "mysql-master:host-gateway"
+      - "redis-ENV:host-gateway"
