--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,10 +76,10 @@ Stage:
         - LOCAL_PATH="/home/"$CI_PROJECT_ROOT_NAMESPACE"/"$ENV"/svc/"$CI_PROJECT_NAME
         - echo "deploy to $DEV_SERVER"
         - echo "$CONTAINER_IMAGE:$CONTAINER_IMAGE_TAG @ $LOCAL_PATH"
-        - ssh -o StrictHostKeyChecking=no root@$DEV_SERVER "mkdir -p $LOCAL_PATH/"
+        - ssh -o StrictHostKeyChecking=no root@$DEV_SERVER '"mkdir -p $LOCAL_PATH/"
         - sed -r "s|(image:.).*:.*|\1$CONTAINER_IMAGE:$CONTAINER_IMAGE_TAG|;s|ENV|$ENV|g" -i docker-compose.yml
         - scp -o StrictHostKeyChecking=no docker-compose.yml root@$DEV_SERVER:$LOCAL_PATH/docker-compose.yml
-        - ssh -o StrictHostKeyChecking=no root@$DEV_SERVER "cd $LOCAL_PATH; docker-compose -f ../../../docker-compose.yml -f docker-compose.yml up -d"
+        - ssh -o StrictHostKeyChecking=no root@$DEV_SERVER 'cd $LOCAL_PATH; docker-compose -f ../../../docker-compose.yml -f docker-compose.yml up -d; docker exec ibt-ingress /bin/bash -c "nginx -s reload"'
 #    only:
 #        - tags
     when: manual
@@ -96,10 +96,10 @@ Production:
         - LOCAL_PATH="/home/"$CI_PROJECT_ROOT_NAMESPACE"/"$ENV"/svc/"$CI_PROJECT_NAME
         - echo "deploy to $PROD_SERVER"
         - echo "$CONTAINER_IMAGE:$CONTAINER_IMAGE_TAG @ $LOCAL_PATH"
-        - ssh -o StrictHostKeyChecking=no root@$PROD_SERVER "mkdir -p $LOCAL_PATH/"
+        - ssh -o StrictHostKeyChecking=no root@$PROD_SERVER '"mkdir -p $LOCAL_PATH/"
         - sed -r "s|(image:.).*:.*|\1$CONTAINER_IMAGE:$CONTAINER_IMAGE_TAG|;s|ENV|$ENV|g" -i docker-compose.yml
         - scp -o StrictHostKeyChecking=no docker-compose.yml root@$PROD_SERVER:$LOCAL_PATH/docker-compose.yml
-        - ssh -o StrictHostKeyChecking=no root@$PROD_SERVER "cd $LOCAL_PATH; docker-compose -f ../../../docker-compose.yml -f docker-compose.yml up -d"
+        - ssh -o StrictHostKeyChecking=no root@$PROD_SERVER 'cd $LOCAL_PATH; docker-compose -f ../../../docker-compose.yml -f docker-compose.yml up -d; docker exec ibt-ingress /bin/bash -c "nginx -s reload"'
 #    only:
 #        - tags    
     when: manual
