--- a/composer.json
+++ b/composer.json
@@ -70,11 +70,11 @@
         "ibt/cm-lib": "dev-master",
         "ibt/cms-lib": "dev-master",
         "ibt/common-lib": "dev-master",
-        "ibt/logistics-lib": "dev-feature/BX-5759-dpd-delivery as dev-master",
+        "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
-        "ibt/oms-lib": "dev-feature/BX-5759-dpd-delivery as dev-master",
+        "ibt/oms-lib": "dev-master",
         "ibt/pim-lib": "dev-master",
         "ibt/reports-lib": "dev-master",
         "ibt/store-lib": "dev-master",
