--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
         "box/spout": "^3.3",
         "ibt/catalog-import-lib": "dev-master",
         "ibt/cm-lib": "dev-master",
-        "ibt/cms-lib": "dev-master",
+        "ibt/cms-lib": "feature/8996-counter-in-banners as dev-master",
         "ibt/common-lib": "dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
