--- a/html/package.json
+++ b/html/package.json
@@ -138,8 +138,11 @@
         "ckeditor5-custom-build": "file:./customCKEditorBuild",
         "clipboard-polyfill": "^2.8.6",
         "core-js": "3",
+        "devextreme": "22.1",
+        "devextreme-vue": "22.1",
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
+        "globalize": "^1.7.0",
         "jquery": "^3.4.1",
         "jschardet": "^3.0.0",
         "lazysizes": "^5.0.0",
