--- a/html/package.json
+++ b/html/package.json
@@ -139,6 +139,7 @@
         "clipboard-polyfill": "^2.8.6",
         "core-js": "3",
         "devextreme": "22.1",
+        "devextreme-cldr-data": "^1.0.3",
         "devextreme-vue": "22.1",
         "focus-visible": "^4.1.5",
         "fontfaceobserver": "^2.1.0",
