--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "ibt/catalog-import-lib": "dev-master",
         "ibt/cm-lib": "dev-master",
         "ibt/cms-lib": "dev-master",
-        "ibt/common-lib": "dev-fix/8397-duplicate-modal-addusers as dev-master",
+        "ibt/common-lib": "dev-master",
         "ibt/logistics-lib": "dev-master",
         "ibt/marketing-lib": "dev-master",
         "ibt/merchant-management-lib": "dev-master",
