--- a/composer.json
+++ b/composer.json
@@ -75,7 +75,7 @@
         "ibt/merchant-management-lib": "dev-master",
         "ibt/message-lib": "dev-master",
         "ibt/oms-lib": "dev-master",
-        "ibt/pim-lib": "dev-master",
+        "ibt/pim-lib": "dev-feature/10899-xml-id as master",
         "ibt/reports-lib": "dev-master",
         "ibt/store-lib": "dev-master",
         "laravel/framework": "^9.0",
