--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ APP_NAME="IBT Admin"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_DEBUG_IP=
+APP_DEBUG_IP_WHITELIST=
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
